--- a/src/styles/Freescreen.css
+++ b/src/styles/Freescreen.css
@@ -1,9 +1,7 @@
 
 img {
   float: left;
-  width: 25%;
-  padding-left: 500px;
-  
+  width: 25%;  
 }
 
 .freescreenform {
